# choosr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  IDEAS  ProfileSelector.qml  README.md  browser.py  choosr.desktop  choosr.py  chrome.py  firefox.py  install.sh  logging_config.py  platform_support.py  pyproject.toml  qt_interface.py  uninstall.sh
.github/workflows/: ci.yml  dependencies.yml  release.yml
docs/plans/: 2026-02-03-quality-overhaul-design.md  2026-02-03-quality-overhaul.md
src/: .main.rs.swp  main.rs
src/choosr/: __init__.py  __main__.py  browser.py  chrome.py  firefox.py  qt_interface.py
tests/: __init__.py  test_browser.py  test_cache.py  test_choosr.py  test_chrome.py  test_firefox.py  test_logging_config.py  test_platform_support.py  test_qt_interface.py
