[project]
name = "choosr"
version = "0.1.0"
description = "Browser profile selector application"
authors = [
    {name = "Andy Clegg", email = "andrew.clegg@gmx.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tldextract>=5.3.1",
    "pyyaml>=6.0.2",
    "pyside6>=6.9.1",
]

[project.scripts]
choosr = "choosr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "pytest>=9.0.3",
    "pytest-mock>=3.10.0",
    "pytest-qt>=4.2.0",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
qt_api = "pyside6"
addopts = "--tb=short -v"
